--- a/regex.Rmd
+++ b/regex.Rmd
@@ -352,3 +352,12 @@ p1 <- 'I want this here-keyword there'
 gsub('(.+\\s)(\\w+)(\\s|-)(keyword)(\\s|-)(\\w+).*', '\\2', p1, perl = TRUE)
 gsub('(.+\\s)(\\w+)(\\s|-)(keyword)(\\s|-)(\\w+).*', '\\6', p1, perl = TRUE)
 ```
+
+\* **Extracting time formats from strings**
+
+```{r, results='hold'}
+p1 <- c('R uses 1:5 for 1, 2, 3, 4, 5.', 
+        'At 3:00 we will meet up and leave by 4:30:20.',
+        'We will meet at 6:33.', 'He ran it in 0:22.34829985234 seconds.')
+regmatches(p1, gregexpr('\\d{0,2}:\\d{2}(?:[:.]\\d+)?', p1))
+```
