--- a/regex.Rmd
+++ b/regex.Rmd
@@ -361,3 +361,22 @@ p1 <- c('R uses 1:5 for 1, 2, 3, 4, 5.',
         'We will meet at 6:33.', 'He ran it in 0:22.34829985234 seconds.')
 regmatches(p1, gregexpr('\\d{0,2}:\\d{2}(?:[:.]\\d+)?', p1))
 ```
+
+\* **Using `\K` and inserting spaces between words**
+
+The `\K` escape sequence resets the starting point of the reported match and any previously consumed characters are no longer included, basically throwing away everything matched up to that point.
+
+Another example of using capturing groups to capture to matched context and referring back to each matched group in the replacement.
+
+```{r, results='hold'}
+p1 <- c('CamelCaseIsFun','ThisIsRegexxxxx')
+gsub('[a-z]\\K(?=[A-Z])', ' ', p1, perl = TRUE)
+```
+
+```
+[a-z]       # any character of a to z
+\K          # \K (resets the starting point of the reported match)
+(?=         # look ahead to see if there is:
+  [A-Z]     #   any character of A to Z
+)           # end of look-ahead
+```
