--- a/regex.Rmd
+++ b/regex.Rmd
@@ -16,9 +16,19 @@ output:
 \* [Characters, metacharacters, and quantifiers](#specific-characters)    
 \* [Anchors and look-arounds](#anchors)   
 \* [Character shortcuts and special characters](#character-class-shortcuts)   
-\* [Examples](#examples)    
+\* [Examples](#examples)
 
-\* references:   
+###  other resources 
+
+\* __[Regex 101](https://www.regex101.com)__    
+\* [Regex tester](http://regexpal.com)    
+\* __[ReGeX cRoSsWoRdS!](http://regexcrossword.com)__   
+\* __[Text explainer](http://rick.measham.id.au/paste/explain.pl?regex=%28%3F<%3Dfoo%29%5Cs%2Afoo%5BA-Z%5D%5Cd%7B2%2C3%7D)__   
+\* [Explainer 1 (with flavors)](https://www.debuggex.com)   
+\* [Explainer 2 (javascript)](http://www.regexper.com)    
+
+### references:
+  
 [general perl regex](#www.erudil.com/preqr.pdf)     
 [look arounds](#http://www.perlmonks.org/?node_id=518444)   
 
@@ -36,8 +46,11 @@ output:
 `\n`    |newline (OS neutral)
 `\r`    |carriage return
 `\f`    |form feed
-`\cx`   |control character **CTRL-_x_**
+`\cx`   |control character **C-_x_**
 `\NNN`  |octal code for ASCII character _**NNN**_
+`\cN`   |control character with the hex code _**N**_
+`\xYY`  |character with the hex code _**NN**_
+`\uYYYY`|character with the hex code _**NNNN**_
 
 **Quantifiers**
 
@@ -47,14 +60,16 @@ character | meaning
 --------|--------
 `*`     |match **0** or more times, i.e., any number of times
 `+`     |match **1** or more times, i.e., at least once
-`?`     |match 0 or 1 times, i.e., at most once
+`?` (`??`)     |match (or lazy match) 0 or 1 times, i.e., at most once
 `{n}`   |match *exactly* **n** times
 `{n,}`  |match *at least* **n** times
 `{n,m}` |match *at least* **n** times but *no more* than **m** times
 
 **Metacharacters**
 
-The following characters need to be escaped because they have special meanings: `\ | ( ) [ { ^ $ * + ? .`
+The following characters need to be escaped because they have special meanings:
+
+`\ | ( ) [ { ^ $ * + ? .`
 
  character | meaning
 --------|--------
@@ -66,6 +81,7 @@ The following characters need to be escaped because they have special meanings: 
 `[ ]`   |define character class, matches any one of the characters contained within the brackets
 `\`     |escapes next character, i.e., modify the meaning of the next character
 `\N`    |matches the text from the N<sup>th</sup> group
+`\K`    |resets the beginning of the match to the current position (this only affects what is reported as the full match)
 `^`     |if the first character of a class, negates that class
 `-`     |unless first, last, or escaped (i.e., `[ad-]`: match a, d, or -), used for a range (`[a-b]`: match any character in the range from a to b)
 
