--- a/regex.Rmd
+++ b/regex.Rmd
@@ -1,4 +1,5 @@
 ---
+title: "regex in R cheatsheet"
 output:
   html_document:
     css: ~/knitr.css
@@ -8,17 +9,10 @@ output:
     number_sections: no
     self_contained: yes
     theme: journal
-    toc: no
+    toc: yes
 ---
 
-### perl regex cheatsheet with examples in R
-
-\* [Characters, metacharacters, and quantifiers](#specific-characters)    
-\* [Anchors and look-arounds](#anchors)   
-\* [Character shortcuts and special characters](#character-class-shortcuts)   
-\* [Examples](#examples)
-
-###  other resources 
+##  other resources 
 
 \* __[Regex 101](https://www.regex101.com)__    
 \* [Regex tester](http://regexpal.com)    
@@ -27,7 +21,7 @@ output:
 \* [Explainer 1 (with flavors)](https://www.debuggex.com)   
 \* [Explainer 2 (javascript)](http://www.regexper.com)    
 
-### references:
+## references:
   
 [general perl regex](#www.erudil.com/preqr.pdf)     
 [look arounds](#http://www.perlmonks.org/?node_id=518444)   
@@ -37,6 +31,8 @@ output:
 <div align=center><a href="http://xkcd.com/208/"><img src="http://imgs.xkcd.com/comics/regular_expressions.png" style="display: block; margin: auto;"/></a></div>
 
 <div align=center><a href="http://xkcd.com/1313/"><img src="http://imgs.xkcd.com/comics/regex_golf.png" style="display: block; margin: auto;"/></a></div>
+
+## Basic regex
 
 ### Specific characters
 
@@ -52,7 +48,7 @@ output:
 `\xYY`  |character with the hex code _**NN**_
 `\uYYYY`|character with the hex code _**NNNN**_
 
-**Quantifiers**
+### Quantifiers
 
 These quantifiers apply to the preceding *atom*. By default, they are "greedy" meaning they attempt to match as many characters as possible. In order to match as *few* characters as possible, follow them with a `?`.
 
@@ -65,7 +61,7 @@ character | meaning
 `{n,}`  |match *at least* **n** times
 `{n,m}` |match *at least* **n** times but *no more* than **m** times
 
-**Metacharacters**
+### Metacharacters
 
 The following characters need to be escaped because they have special meanings:
 
@@ -85,7 +81,20 @@ The following characters need to be escaped because they have special meanings:
 `^`     |if the first character of a class, negates that class
 `-`     |unless first, last, or escaped (i.e., `[ad-]`: match a, d, or -), used for a range (`[a-b]`: match any character in the range from a to b)
 
-### Anchors
+### Character class shortcuts
+
+These can be used on their own or within a character class.
+
+character | long version | meaning
+--------|---------------|--------
+`\d`    |`[0-9]`        |digit
+`\D`    |`[^0-9]`       |non-digit
+`\s`    |`[ \t\n\r\f]`  |whitespace
+`\S`    |`[~ \t\n\r\f]` |non-whitespace
+`\w`    |`[a-zA-Z0-9_]` |"word" character
+`\W`    |`[^a-zA-Z0-9_]`|non-"word" character
+
+## Anchors
 
 Also known as *zero-width (length) assertions*, these do not match any characters but "look around" to see what comes before and/or after the current position.
 
@@ -96,7 +105,7 @@ character | meaning
 `\b`    |match at a "word" (`\w`) boundary
 `\B`    |match at *not* a "word" boundary
 
-**Look-ahead and look-behind**
+### Look-ahead and look-behind
 
 Zero-length assertions can also be used to match extended patterns and require that a pattern match succeed (*positive assertion*) or fail (*negative assertion*).
 
@@ -111,20 +120,9 @@ Every extended pattern is written as a parenthetical group with a question mark 
 
 Look-behind expressions cannot be of variable length. That means you cannot use quantifiers (?, *, +, or {1,5}) or alternation of different-length items inside them.
 
-### Character class shortcuts
+## Additional regex things
 
-These can be used on their own or within a character class.
-
-character | long version | meaning
---------|---------------|--------
-`\d`    |`[0-9]`        |digit
-`\D`    |`[^0-9]`       |non-digit
-`\s`    |`[ \t\n\r\f]`  |whitespace
-`\S`    |`[~ \t\n\r\f]` |non-whitespace
-`\w`    |`[a-zA-Z0-9_]` |"word" character
-`\W`    |`[^a-zA-Z0-9_]`|non-"word" character
-
-**Metaquote and case translations**
+### Metaquote and case translations
 
 character | meaning
 --------|--------
@@ -137,7 +135,7 @@ character | meaning
 
 <font size =1><sup>&dagger;</sup>Unicode concept which most often is equal to uppercase, but for certain characters (like the German "sharp s") there is a difference.</font>
 
-**Special variables**
+### Special variables
 
 character | meaning
 --------|--------
@@ -147,7 +145,7 @@ character | meaning
 `\N`    |characters captured by the N<sup>th</sup> set of parentheses (if on the match side)
 `$N`    |characters captured by the N<sup>th</sup> set of parentheses (if *not* on the match side)
 
-**Modifiers**
+### Modifiers
 
 These modifiers apply to the entire pattern (all except `/e` apply to both `m//` and `s///`)
 
@@ -160,16 +158,16 @@ character | meaning
 `/x`    |ignore most whitespace and allow comments
 `/e`    |evaluate right-hand side of `s///` as an expression
 
-**Binding operators**
+### Binding operators
 
 character | meaning
 --------|--------
 `=~`    |TRUE if the regex matches
 `!~`    |TRUE if the regex does *not* match
 
-### Examples
+## Examples
 
-\* **Trimming whitespace**
+### Trimming whitespace
 
 ```{r, results='hold'}
 p1 <- '  this text string   has much white space 
@@ -186,7 +184,7 @@ gsub('^\\s+|\\s+$', '', p1)
 gsub('\\s+', '', p1)
 ```
 
-\* **Find the last occurrence of a string**
+### Find the last occurrence of a string
 
 There are actually a number of ways to get the last occurrence that don't involve look-arounds, but if you think of "the last foo" as "foo that isn't followed by a string containing foo," you can express that notion like this:
 
@@ -197,7 +195,7 @@ gsub('word(?!.*word)', 'XXX', p1, perl = TRUE)
 gsub('word(?!.*word)', 'XXX', p2, perl = TRUE)
 ```
 
-\* **Capitalize the first letter of each word**
+### Capitalize the first letter of each word
 
 We can use the combination of `regmatches` and `gregexpr` in R so see the letters this regex is matching. Then do a global sub (replace all the matches, not just the first) with the `\\U`ppercase version of the `\\1`<sup>st</sup> group.
 
@@ -209,7 +207,7 @@ regmatches(p1, gregexpr('(?<=\\b)([a-z])', p1, perl = TRUE))[[1]]
 gsub('(?<=\\b)([a-z])', '\\U\\1', p1, perl = TRUE)
 ```
 
-\* **Replacing all or parts of a string**
+### Replacing all or parts of a string
 
 Many substitutions match a chunk of text and then replace part or all of it. You can often avoid that by using look-arounds:
 
@@ -220,7 +218,7 @@ gsub('(?<=word\\b)', ',', p1, perl = TRUE)  ## only patterns on a word boundary
 gsub('(?<=word$)', ',', p1, perl = TRUE)    ## only patters on a string boundary
 ```
 
-\* **Inserting a character between two matches**
+### Inserting a character between two matches
 
 Sometimes we want to insert after a specific pattern but only if it is followed by another specific pattern.
 
@@ -236,7 +234,7 @@ p1 <- 'AbcDef(123)'
 gsub('(?<=[^A-Z(])(?=[A-Z(])', ' ', p1, perl = TRUE)
 ```
 
-\* **Matching a pattern that doesn't include another pattern**
+### Matching a pattern that doesn't include another pattern
 
 You might want to capture everything between foo and bar that doesn't include baz. The technique is to have the regex engine look-ahead at every character to ensure that it isn't the beginning of the undesired pattern:
 
@@ -283,7 +281,9 @@ broken down:
 $               # before an optional \n, and the end of the string
 ```
 
-\* **Greed:** placing `?` after quantifiers determine if we want to match until the last occurrence of the look-ahead or until the first occurrence.
+### Greed
+
+Placing `?` after quantifiers determine if we want to match until the last occurrence of the look-ahead or until the first occurrence.
 
 ```{r, results='hold'}
 p1 <- 'match from a to z and after z if there is a z that follows but at not the last z because I said so'
@@ -295,7 +295,7 @@ regmatches(p1, gregexpr(' a\\s?((?:(?! not ).)*?) z ', p1, perl = TRUE))[[1]]
 regmatches(p1, gregexpr(' a(.*?)z ', p1, perl = TRUE))[[1]]
 ```
 
-\* **Extracting from between parentheses (or other characters)**
+### Extracting from between parentheses (or other characters)
 
 ```{r, results='hold'}
 p1 <- 'extract (everything) between parentheses (if any)'
@@ -306,7 +306,7 @@ regmatches(p1, gregexpr('(?<=\\().*?(?=\\))', p1, perl = TRUE))[[1]]
 regmatches(p1, gregexpr('(?=\\().*?(?<=\\))', p1, perl = TRUE))[[1]]
 ```
 
-\* **Nesting (look-arounds inside of other look-arounds)**
+### Nesting (look-arounds inside of other look-arounds)
 
 A look-around sub-expression inherits a starting position from the enclosing expression and can walk all around relative to that position without affecting the position of the enclosing expression. They all have independent (though initially inherited) bookkeeping for where they are in the string.
 
@@ -337,7 +337,7 @@ gsub('(?<=,(?!(?<=\\d,)(?=\\d)))', ' ', p1, perl = TRUE)
 gsub('(?<=[,.](?!(?<=\\d[,.])(?=\\d)))', ' ', p1, perl = TRUE)
 ```
 
-\* **Capitalizing every first word of every sentence**
+### Capitalizing every first word of every sentence
 
 ```{r}
 txt <- "this is just a test! i'm not sure if this is o.k. or if it will work? who knows? regex is sorta new to me... There are certain cases that I may not figure out. sad!"
@@ -359,7 +359,7 @@ Explanation:
 ['\"]?            # optional ending punctuation
 (?=\\s|$)"        # optional closing quote
 ```
-\* **Capturing a word before (or after) a keyword**
+### Capturing a word before (or after) a keyword
 
 This is an example of creating and referencing groups. Each `( )` defines a group and can be referenced with `\\N` for the N<sup>th</sup> group.
 
@@ -369,7 +369,7 @@ gsub('(.+\\s)(\\w+)(\\s|-)(keyword)(\\s|-)(\\w+).*', '\\2', p1, perl = TRUE)
 gsub('(.+\\s)(\\w+)(\\s|-)(keyword)(\\s|-)(\\w+).*', '\\6', p1, perl = TRUE)
 ```
 
-\* **Extracting time formats from strings**
+### Extracting time formats from strings
 
 ```{r, results='hold'}
 p1 <- c('R uses 1:5 for 1, 2, 3, 4, 5.', 
@@ -378,7 +378,7 @@ p1 <- c('R uses 1:5 for 1, 2, 3, 4, 5.',
 regmatches(p1, gregexpr('\\d{0,2}:\\d{2}(?:[:.]\\d+)?', p1))
 ```
 
-\* **Using `\K` and inserting spaces between words**
+### Using `\K` and inserting spaces between words
 
 The `\K` escape sequence resets the starting point of the reported match and any previously consumed characters are no longer included, basically throwing away everything matched up to that point.
 
