--- a/regex.Rmd
+++ b/regex.Rmd
@@ -12,7 +12,7 @@ output:
     toc: yes
 ---
 
-##  other resources 
+##  Other resources 
 
 \* __[Regex 101](https://www.regex101.com)__    
 \* [Regex tester](http://regexpal.com)    
@@ -21,10 +21,10 @@ output:
 \* [Explainer 1 (with flavors)](https://www.debuggex.com)   
 \* [Explainer 2 (javascript)](http://www.regexper.com)    
 
-## references:
+## References
   
 [general perl regex](#www.erudil.com/preqr.pdf)     
-[look arounds](#http://www.perlmonks.org/?node_id=518444)   
+[look-arounds](#http://www.perlmonks.org/?node_id=518444)   
 
 <div align=center><a href="http://xkcd.com/1171/"><img src="http://imgs.xkcd.com/comics/perl_problems.png" style="display: block; margin: auto;"/></a></div>
 
@@ -164,6 +164,21 @@ character | meaning
 --------|--------
 `=~`    |TRUE if the regex matches
 `!~`    |TRUE if the regex does *not* match
+
+## Function for captures
+
+Common r functions like `regexpr`, `gregexpr`, or `regexec` are more focused on matching regular expressions than returning matches. Using a [helper function](https://github.com/raredd/rawr/blob/master/R/utils.R#L1352:L1420), we can extract the captures in a useful format.
+
+```{r, results='hold'}
+library('rawr')
+x <- c('larry:35,M', 'alison:22,F', 'dave', 'lily:55,F')
+m <- regexpr('(.*):(\\d+),([MF])', x, perl = TRUE)
+regcaptures(x, m)
+
+x <- 'ACCACCACCAC'
+m <- gregexpr('(?=([AC]C))', x, perl = TRUE)
+regcaptures(x, m)[[1]]
+```
 
 ## Examples
 
@@ -395,4 +410,26 @@ gsub('[a-z]\\K(?=[A-Z])', ' ', p1, perl = TRUE)
 (?=         # look ahead to see if there is:
   [A-Z]     #   any character of A to Z
 )           # end of look-ahead
+```
+### Removing words with repeating letters
+
+It may be useful to filter out words with repeating characters which are not really words at all.
+
+```{r, results='hold'}
+p1 <- "aaaahahahahaha that was a good banana joke ahahah haha aha harhar"
+gsub('\\b(\\S+?)\\1\\S*\\b', '', p1, perl = TRUE)
+```
+
+```
+\b        # the boundary between a word char (\w) and
+          # something that is not a word char
+(         # group and capture to \1:
+  \S+?     #  non-whitespace (all but \n, \r, \t, \f, and " ") (1 or
+           #  more times (matching the least amount possible))
+)         # end of \1
+\1        # what was matched by capture \1
+\S*       # non-whitespace (all but \n, \r, \t, \f, and " ") (0 or
+          # more times (matching the most amount possible))
+\b        # the boundary between a word char (\w) and
+          # something that is not a word char
 ```
