--- a/regex.Rmd
+++ b/regex.Rmd
@@ -200,6 +200,12 @@ gsub('^\\s+|\\s+$', '', p1)
 gsub('\\s+', '', p1)
 ```
 
+```{r, results='hold'}
+## remove whitespace between single letters
+p1 <- c('L L C',  'P O BOX  123456 N Y', 'NEW YORK')
+gsub('(?<=\\b\\w)\\s(?=\\w\\b)', '', p1, perl = TRUE)
+```
+
 ### Find the last occurrence of a string
 
 There are actually a number of ways to get the last occurrence that don't involve look-arounds, but if you think of "the last foo" as "foo that isn't followed by a string containing foo," you can express that notion like this:
